force-app/main/default/objects/CareProgram/fields/HUB_Model__c.field-meta.xml
<CustomField>
    <fullName>HUB_Model__c</fullName><label>HUB Model</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Full Service</fullName><default>true</default><label>Full Service</label></value>
        <value><fullName>Light Touch</fullName><default>false</default><label>Light Touch</label></value>
        <value><fullName>Digital Only</fullName><default>false</default><label>Digital Only</label></value>
    </valueSetDefinition></valueSet>
</CustomField>