force-app/main/default/objects/CareProgram/fields/Max_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Max_Enrollment__c</fullName><label>Max Enrollment</label>
    <type>Number</type><precision>10</precision><scale>0</scale>
</CustomField>