force-app/main/default/objects/CareProgram/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName><label>Program Code</label>
    <type>Text</type><length>50</length><unique>true</unique><externalId>true</externalId>
</CustomField>