force-app/main/default/objects/CareProgram/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName><label>Program Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
        <value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
        <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
    </valueSetDefinition></valueSet>
</CustomField>